@@ -294,6 +294,19 @@ module Zena
           ''
         end
 
+        def year_tz(tz = nil)
+          if tz.blank?
+            tz = visitor.tz
+          elsif tz.kind_of?(String)
+            tz = TZInfo::Timezone.get(tz)
+          end
+          tz.utc_to_local(self).year
+        rescue TZInfo::InvalidTimezoneIdentifier
+          0
+        rescue TZInfo::AmbiguousTime
+          0
+        end
+
         def to_date_tz(tz = nil)
           if tz.blank?
             tz = visitor.tz
@@ -319,12 +332,14 @@ module Zena
           :minutes => Number,
           :seconds => Number}] => Time
         safe_method_for Time, :to_i    => {:class => Number, :pre_processor => true}
-        safe_method_for Time, :year       => {:class => Number, :pre_processor => true}
-        safe_method_for Time, [:strftime, String] => {:class => String, :pre_processor => true, :method => 'strftime_tz'}
-        safe_method_for Time, [:strftime, String, String] => {:class => String, :pre_processor => true, :method => 'strftime_tz'}
+        safe_method_for Time, :year                      => {:class => Number, :pre_processor => true, :method => 'year_tz'}
+        safe_method_for Time, [:year, String]            => {:class => Number, :pre_processor => true, :method => 'year_tz'}
+        safe_method_for Time, [:year, TZInfo::Timezone]  => {:class => Number, :pre_processor => true, :method => 'year_tz'}
+        safe_method_for Time, [:strftime, String]                   => {:class => String, :pre_processor => true, :method => 'strftime_tz'}
+        safe_method_for Time, [:strftime, String, String]           => {:class => String, :pre_processor => true, :method => 'strftime_tz'}
         safe_method_for Time, [:strftime, String, TZInfo::Timezone] => {:class => String, :pre_processor => true, :method => 'strftime_tz'}
-        safe_method_for Time, :to_date => {:class => Date, :pre_processor => true, :method => 'to_date_tz'}
-        safe_method_for Time, [:to_date, String] => {:class => Date, :pre_processor => true, :method => 'to_date_tz'}
+        safe_method_for Time, :to_date                     => {:class => Date, :pre_processor => true, :method => 'to_date_tz'}
+        safe_method_for Time, [:to_date, String]           => {:class => Date, :pre_processor => true, :method => 'to_date_tz'}
         safe_method_for Time, [:to_date, TZInfo::Timezone] => {:class => Date, :pre_processor => true, :method => 'to_date_tz'}
         safe_method_for TZInfo::Timezone, :to_s => {:class => String, :pre_processor => true}
 
