@@ -141,9 +141,3 @@ hash_to_params:
   src: "<b do='{:q =&gt; params[:q]}' do='to_param'/>"
   tem: "<% var1 = {:q => params[:q]} %><b><%= var1.to_param %></b>"
   res: '<b>q%5Bone%5D=1&q%5Btwo%5D=2</b>'
-
-time_to_date:
-  context:
-    tz: 'US/Pacific'
-  src: "<b do='created_at.to_date'/> <b do='created_at.to_date(\"UTC\")'/>"
-  res: "<b>2006-03-09</b> <b>2006-03-10</b>"
