@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2012-01-26}
+  s.date = %q{2012-01-30}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -1983,6 +1983,9 @@ Gem::Specification.new do |s|
     "test/selenium/Edit/edit4.rsel",
     "test/selenium/Edit/edit5.rsel",
     "test/selenium/Edit/edit6.rsel",
+    "test/selenium/Filter/0setup.rsel",
+    "test/selenium/Filter/filter1.rsel",
+    "test/selenium/Filter/filter2.rsel",
     "test/selenium/Form/0setup.rsel",
     "test/selenium/Form/form1.rsel",
     "test/selenium/Form/form2.rsel",
@@ -2165,11 +2168,12 @@ Gem::Specification.new do |s|
       s.add_runtime_dependency(%q<tzinfo>, [">= 0"])
       s.add_runtime_dependency(%q<rails>, ["= 2.3.11"])
       s.add_runtime_dependency(%q<httparty>, ["= 0.7.8"])
+      s.add_runtime_dependency(%q<simple_xlsx_writer>, [">= 0"])
       s.add_runtime_dependency(%q<rubyless>, ["= 0.8.6"])
       s.add_runtime_dependency(%q<property>, ["= 2.2.0"])
       s.add_runtime_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_runtime_dependency(%q<authlogic>, ["= 2.1.3"])
-      s.add_runtime_dependency(%q<zafu>, ["= 0.8.5"])
+      s.add_runtime_dependency(%q<zafu>, ["= 0.8.6"])
       s.add_runtime_dependency(%q<shoulda>, ["= 2.10.3"])
       s.add_runtime_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_runtime_dependency(%q<syntax>, ["= 1.0.0"])
@@ -2191,11 +2195,12 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<tzinfo>, [">= 0"])
       s.add_dependency(%q<rails>, ["= 2.3.11"])
       s.add_dependency(%q<httparty>, ["= 0.7.8"])
+      s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
       s.add_dependency(%q<rubyless>, ["= 0.8.6"])
       s.add_dependency(%q<property>, ["= 2.2.0"])
       s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_dependency(%q<authlogic>, ["= 2.1.3"])
-      s.add_dependency(%q<zafu>, ["= 0.8.5"])
+      s.add_dependency(%q<zafu>, ["= 0.8.6"])
       s.add_dependency(%q<shoulda>, ["= 2.10.3"])
       s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_dependency(%q<syntax>, ["= 1.0.0"])
@@ -2218,11 +2223,12 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<tzinfo>, [">= 0"])
     s.add_dependency(%q<rails>, ["= 2.3.11"])
     s.add_dependency(%q<httparty>, ["= 0.7.8"])
+    s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
     s.add_dependency(%q<rubyless>, ["= 0.8.6"])
     s.add_dependency(%q<property>, ["= 2.2.0"])
     s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
     s.add_dependency(%q<authlogic>, ["= 2.1.3"])
-    s.add_dependency(%q<zafu>, ["= 0.8.5"])
+    s.add_dependency(%q<zafu>, ["= 0.8.6"])
     s.add_dependency(%q<shoulda>, ["= 2.10.3"])
     s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
     s.add_dependency(%q<syntax>, ["= 1.0.0"])
